# pkgi-psp

./: CHANGELOG.md  CMakeLists.txt  README.md  translate.po
.github/workflows/: build.yml
data/: pkgi.txt  sound.ahx
data/LANG/: ch.txt  de.po  es.po  fi.po  fr.po  id.po  it.po  pl.po  pt.po  tr.po  zh.txt
docs/: README.md
include/: ahx.h  font-8x16.h  font-9x16.h  libfont.h  pkgi.h  pkgi_aes.h  pkgi_db.h  pkgi_download.h  pkgi_sha256.h  pkgi_style.h  psppad.h  ttf_render.h
source/: ahx.c  depackager.c  libfont.c  loadpng.c  pkg2iso.c  pkgi.c  pkgi_aes.c  pkgi_config.c  pkgi_db.c  pkgi_dialog.c  pkgi_download.c  pkgi_menu.c  pkgi_psp.c  psppad.c  ttf_fonts.c  zip_util.c
